# music-ingest

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.ghcr.yml  docker-compose.yml  flake.nix  justfile  pyproject.toml
.github/workflows/: docker.yml
beets/: config.yaml
conf/: config.yaml
conf/app/: base.yaml
conf/beets/: default.yaml
conf/db/: sqlite.yaml
conf/logging/: default.yaml
conf/paths/: default.yaml
src/music_ingest/: bootstrap.py  main.py
src/music_ingest/config/: __init__.py  loader.py  schema.py
src/music_ingest/domain/: __init__.py  enums.py  models.py
src/music_ingest/infra/: beets_runner.py  db.py  logging.py  scanner.py
src/music_ingest/services/: __init__.py  imports.py
src/music_ingest/ui/: __init__.py  app.py  components.py
src/music_ingest/ui/pages/: __init__.py  incoming.py  jobs.py
src/music_ingest/worker/: __init__.py  executor.py
tests/: test_beets_runner.py  test_bootstrap.py  test_config_loader.py  test_db.py  test_import_worker.py  test_jobs_page.py  test_logging.py  test_sample.py  test_scanner.py  test_ui_app.py
