[project]
name = "music_ingest"
version = "0.1.0"
description = "Web UI for importing ripped albums into a Beets-managed music library."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
  "beets",
  "hydra-core",
  "nicegui",
  "omegaconf",
  "rich",
]

authors = [{ name = "neodymium6" }]


[dependency-groups]
dev = [
  "mypy>=1.11.2",
  "pytest>=9.0.1",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
warn_unused_configs = true
incremental = true
cache_dir = ".mypy_cache"

[tool.ruff]
line-length = 100
required-version = ">=0.6.9"
src = ["src"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]
